# timeedit-leaderboard

./: .gitignore  Cargo.toml  index.html  style.css
.github/workflows/: deploy.yml
src/: main.rs
timeedit-leaderboard/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: fetch.rs  html.rs  leaderboard.rs  main.rs  style.css  teachers.rs
