[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false
repository.workspace = true

[dependencies]
anyhow.workspace = true
postcard = { workspace = true, features = ["alloc"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
reqwest = { version = "0.13", features = ["json", "query"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jiff = { version = "0.2", features = ["serde"] }
tokio = { version = "1.50", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = ["tracing"] }
maud = "0.27"
